--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
   <link rel="icon" type="image/png" href="favicon.png"/>
   <link rel="manifest" href="manifest.json">
+  <meta name="google-signin-client_id" content="750411337406-mq8gph17m7djdae4omvedgpqisd8tgnr.apps.googleusercontent.com">
 </head>
 <body onload="initializeGapi()">
   <script src="main.dart.js"></script>
